--- a/.env
+++ b/.env
@@ -2,16 +2,16 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:lRwUCPKCLYIS24SR4R05vGzIwNAT6czaqpxrUMD2LbM=
 APP_DEBUG=true
-APP_URL=
+APP_URL=http://127.0.0.1:8000/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=/workspaces/livetam1/database/database.sqlite
 DB_USERNAME=root
 DB_PASSWORD=
 
